--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,3 @@
-header {
-    background: #f0f0f0;
-}
-
-footer {
-    background: #f0f0f0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
